# pandora-swe-cli

./: .env.example  .gitignore  AGENTS.md  CEREBRAS_USAGE.md  README.md  pyproject.toml  requirements.txt  test_interrupt.py
prompts/: main-agent.md  subagent.md
src/: agent.py  backend.py  config.py  main.py  prompts.py  ui.py
src/tools/: ask_user.py  fallback.py  git.py  web_search.py
test/: conftest.py  test_agent.py  test_config.py  test_prompts.py  test_tools.py  test_ui.py
